2022-02-10 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.c (leaveBlockScope): fix bug #3289

2022-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  General code cleanup.
	* sdcc/src/SDCCpeeph.c:
	  Fix bug 3291.

2022-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Additional improvements in genPointerGet/genPointerSet.

2022-02-08 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Fix corner cases in genPointerSet.
  	* sdcc/src/mos6502/gen.c:
  	  Add peephole rules to remove redundnat php/plp.

2022-02-02 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdcc/device/include/mcs51/p89lpc9321.h,
	  sdcc/device/include/mcs51/p89lpc9331.h,
	  sdcc/device/include/mcs51/p89lpc9351.h:
	  Switch from Windows 1252 to UTF-8.
	* sdcc/sdas/as6500/r65pst.c,
	  sdcc/support/regression/tests/bitfields-dead-loop.c,
	  sdcc/support/regression/tests/bitfields-bits1.c,
	  sdcc/support/regression/tests/bitfields-checks.c,
	  sdcc/support/sdbinutils/binutils/bfdtest2.c,
	  sdcc/device/include/mcs51/w7100.h,
	  sdcc/device/include/mcs51/at89c51id2.h:
	  Switch from mixed CRLF/LF to LF.

2022-02-08 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* configure,
	  configure.ac:
	  Fix alignment of 6502 and 65c02 port in configure output.

2022-02-08 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Load literal constant instead of temp reg when possible.

2022-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Workaround bug-3129 failures when optimizing for size.

2022-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Additional improvements to genPointerGet and genPointerSet.

2022-02-06 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/mos6502/gen.c:
	  Improve genPointerGet.

2022-02-06 Gabriele Gorla <gorlik@yahoo.com>

	* sdcc/src/hc08/gen.c:
	  Removed useless offset increment.
	* sdcc/src/mos6502/gen.c: